--- a/style.css
+++ b/style.css
@@ -1,9 +1,46 @@
 body {
     text-align: center;
-     background:     #92593e
+     background:     #92593e;
+    margin: 0 auto;
+}
+.caixa {
+    display: inline;
+    position: relative;
+    width: 800px;
+    margin: 0 auto;
+}
+h3 {
+    text-align: left;
+}
+.imagem-logo {
+    width: 10%;
+    margin-left: 18px;
+    border-radius: 90px;
+    box-shadow: 2px 2px 2px #111111;
+}
+nav {
+    position: absolute;
+    top: 90px;
+    right: 65px;
+}
+nav a {
+    font-size: 20px;
+    padding-left: 20px;
+    color: #111111;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+nav a:hover{
+    font-size: 25px;
+    font-weight: bold;
+    text-shadow: 2px 3px 5px rgb(255, 129, 129);
+    color: #78900d;
+    transition: 0.5s;
+
 }
 .capa{
     width: 100%;
+    height: 80%;
 }
       
 .beneficios{
